--- a/Resources/components.json
+++ b/Resources/components.json
@@ -21,8 +21,9 @@
                 "position": [ 0, 1 ],
                 "span": [0, 1],
                 "alignment": "center",
-                "type": "sprite",
-                "img": "icons8-expensive-price-80.png"
+                "type": "icon_circle",
+                "color": "YELLOW",
+                "text": "$"
             },
             {
                 "id": 3,
@@ -57,8 +58,9 @@
                 "position": [ 0, 1 ],
                 "span": [0, 1],
                 "alignment": "center",
-                "type": "sprite",
-                "img": "icons8-roulette-96.png"
+                "type": "roulette",
+                "color": [ "ORANGE", "YELLOW" ],
+                "text": "START"
             },
             {
                 "id": 3,
@@ -101,21 +103,12 @@
                 "fontSize": 0
             },
             {
-                "id": 2,
-                "position": [ 1, 0 ],
-                "alignment": "left",
-                "type": "label",
-                "color": "GRAY",
-                "text": "lv.16",
-                "fontSize": 0
-            },
-            {
                 "id": 12,
                 "position": [ 0, 1 ],
                 "alignment": "left",
                 "type": "button",
                 "color": "YELLOW",
-                "text": "1,642th",
+                "text": "Lv.16",
                 "fontSize": 0
             }
         ]
