--- a/Resources/components.json
+++ b/Resources/components.json
@@ -98,7 +98,7 @@
                 "position": [ 0, 0 ],
                 "alignment": "left",
                 "type": "label",
-                "color": "GRAY",
+                "color": [ "GRAY", "BLACK" ],
                 "text": "teetotal",
                 "fontSize": 0
             },
