--- a/Resources/components.json
+++ b/Resources/components.json
@@ -274,7 +274,7 @@
                 "position": [ 0, 0 ],
                 "alignment": "center",
                 "type": "label",
-                "color": "GRAY",
+                "color": [ "GRAY", "BLACK"],
                 "bgColor": "BLUE_DARK",
                 "text": "ITEM",
                 "fontSize": 0
@@ -291,7 +291,7 @@
                 "alignment": "center_bottom",
                 "type": "label",
                 "color": "BLACK",
-                "text": "x10",
+                "text": "Bomb Attack",
                 "fontSize": -1
             },
             {
@@ -308,8 +308,49 @@
                 "alignment": "center",
                 "type": "button_rectangle_round_shadow",
                 "color": [ "WHITE", "YELLOW" ],
-                "text": "P100",
-                "fontSize": 0
+                "text": "P100"
+            }
+        ]
+    },
+    "play_item": {
+        "dimension": [ 0, 0, 1, 1 ],
+        "margin": [ 0, 0 ],
+        "innerMargin": [ 2, 4 ],
+        "gridSize": [ 1, 4 ],
+        "img": null,
+        "color": "GRAY",
+        "objects": [
+            {
+                "id": 1,
+                "position": [ 0, 0 ],
+                "alignment": "center",
+                "type": "label",
+                "color": [ "GRAY", "BLACK"],
+                "bgColor": "BLUE_DARK",
+                "text": "BOMB",
+                "fontSize": -1
+            },
+            {
+                "position": [ 0, 0 ],
+                "alignment": "left_bottom",
+                "type": "line",
+                "color": "BLUE_LIGHT"
+            },
+            {
+                "id": 2,
+                "position": [ 0, 1 ],
+                "span": [0, 1],
+                "alignment": "center",
+                "type": "sprite",
+                "img": "icons8-atomic-bomb-96.png"
+            },
+            {
+                "id": 3,
+                "position": [ 0, 3 ],
+                "alignment": "center",
+                "type": "button_rectangle_round_shadow",
+                "color": [ "WHITE", "YELLOW" ],
+                "text": "P100"
             }
         ]
     }
