--- a/Resources/components.json
+++ b/Resources/components.json
@@ -122,7 +122,7 @@
             },
             {
                 "id": 3,
-                "position": [ 14, 0 ],
+                "position": [ 15, 0 ],
                 "alignment": "left",
                 "type": "icon_point",
                 "color": "GRAY",
@@ -130,28 +130,29 @@
             },
             {
                 "id": 4,
-                "position": [ 14, 1 ],
+                "position": [ 15, 1 ],
                 "alignment": "left",
                 "type": "icon_heart",
                 "color": "GRAY",
                 "text": "5 / 5"
             },
             {
-                "position": [ 18, 0 ],
-                "alignment": "right",
-                "type": "sprite_button_circle",
-                "link": 10,
-                "img": [ "icons8-settings-100.png", "icons8-settings-filled-100.png" ],
-                "color": "GREEN",
-                "span": [0, 1]
+                "id": 5,
+                "position": [ 13, 1 ],
+                "alignment": "center",
+                "type": "button_rectangle_round_shadow",
+                "color": ["GRAY", "DARKGRAY"],
+                "text": "0:40",
+                "fontSize": -1,
+                "span": [1,0]
             },
             {
                 "position": [ 19, 0 ],
                 "alignment": "right",
                 "type": "sprite_button_circle",
                 "link": 10,
-                "img": [ "icons8-alarm-100.png", "icons8-alarm-filled-100.png" ],
-                "color": "GREEN",
+                "img": [ "icons8-settings-100.png", "icons8-settings-filled-100.png" ],
+                "color": "GREEN_LIGHT",
                 "span": [0, 1]
             }
         ]
@@ -161,7 +162,7 @@
         "margin": [ 0, 0 ],
         "innerMargin": [ 2, 4 ],
         "gridSize": [ 1, 5 ],
-        "img": null,
+        "link": 1,
         "color": "GRAY",
         "objects": [
             {
@@ -212,7 +213,7 @@
         "margin": [ 0, 0 ],
         "innerMargin": [ 2, 4 ],
         "gridSize": [ 1, 5 ],
-        "img": null,
+        "link": 2,
         "color": "GRAY",
         "objects": [
             {
@@ -264,7 +265,7 @@
         "margin": [ 0, 0 ],
         "innerMargin": [ 2, 4 ],
         "gridSize": [ 1, 5 ],
-        "img": null,
+        "link": 3,
         "color": "GRAY",
         "objects": [
             {
@@ -314,7 +315,7 @@
         "margin": [ 0, 0 ],
         "innerMargin": [ 2, 4 ],
         "gridSize": [ 1, 5 ],
-        "img": null,
+        "link": 4,
         "color": "GRAY",
         "objects": [
             {
