--- a/Resources/config.json
+++ b/Resources/config.json
@@ -1,14 +1,82 @@
 {
     "growthPerLevel": 128,
     "rechargeInterval": 300,
-    "gradeTitles": [
-        "INVALID GRADE",
-        "BEGINNER",
-        "BRONZE",
-        "SILVER",
-        "GOLD",
-        "ROYAL",
-        "GOD"
+    "grades": [
+        {
+            "grade": 0,
+            "title": "INVALID GRADE",
+            "speed": 0
+        },
+        {
+            "grade": 1,
+            "title": "BEGINNER",
+            "speed": 0.55
+        },
+        {
+            "grade": 2,
+            "title": "BRONZE 1",
+            "speed": 0.6
+        },
+        {
+            "grade": 3,
+            "title": "BRONZE 2",
+            "speed": 0.65
+        },
+        {
+            "grade": 4,
+            "title": "BRONZE 3",
+            "speed": 0.7
+        },
+        {
+            "grade": 5,
+            "title": "SILVER 1",
+            "speed": 0.9
+        },
+        {
+            "grade": 6,
+            "title": "SILVER 2",
+            "speed": 0.95
+        },
+        {
+            "grade": 7,
+            "title": "SILVER 3",
+            "speed": 1.0
+        },
+        {
+            "grade": 8,
+            "title": "GOLD 1",
+            "speed": 1.2
+        },
+        {
+            "grade": 9,
+            "title": "GOLD 2",
+            "speed": 1.3
+        },
+        {
+            "grade": 10,
+            "title": "GOLD 3",
+            "speed": 1.4
+        },
+        {
+            "grade": 11,
+            "title": "ROYAL 1",
+            "speed": 1.8
+        },
+        {
+            "grade": 12,
+            "title": "ROYAL 2",
+            "speed": 1.9
+        },
+        {
+            "grade": 13,
+            "title": "ROYAL 3",
+            "speed": 2
+        },
+        {
+            "grade": 14,
+            "title": "GOD",
+            "speed": 3
+        }
     ],
     "play": {
         "items": [
@@ -32,17 +100,17 @@
             {
                 "growth": 64,
                 "point": 500,
-                "heart": 2
+                "heart": 1
             },
             {
                 "growth": 32,
                 "point": 350,
-                "heart": 2
+                "heart": 1
             },
             {
                 "growth": 16,
-                "point": 350,
-                "heart": 1
+                "point": 150,
+                "heart": 0
             },
             {
                 "growth": 0,
