--- a/Resources/components.json
+++ b/Resources/components.json
@@ -94,21 +94,22 @@
         "color": 0,
         "objects": [
             {
-                "id": 1,
+                "id": 12,
                 "position": [ 0, 0 ],
                 "alignment": "left",
                 "type": "label",
-                "color": [ "GRAY", "BLACK" ],
-                "text": "teetotal",
+                "color": [ "YELLOW", "BLACK" ],
+                "text": "Lv.16",
                 "fontSize": 0
             },
             {
-                "id": 12,
-                "position": [ 2, 0 ],
-                "alignment": "left",
+                "id": 1,
+                "position": [ 1, 0 ],
+                "span": [2, 0],
+                "alignment": "center",
                 "type": "label",
-                "color": "YELLOW",
-                "text": "Lv.16",
+                "color": [ "GRAY", "BLACK" ],
+                "text": "teetotal",
                 "fontSize": 0
             },
             {
@@ -117,7 +118,7 @@
                 "alignment": "center",
                 "type": "progressbar",
                 "color": [ "BLUE", "GRAY" ],
-                "span": [ 2, 0 ],
+                "span": [ 3, 0 ],
                 "text": "ROYAL"
             },
             {
