add skill in cpu

--- a/Resources/config.json
+++ b/Resources/config.json
@@ -141,20 +141,23 @@
     "play": {
         "items": [
             {
-                "name": "Combo",
+                "name": "Sniper",
                 "price": 150,
-                "img": "icons8-snail-80.png",
+                "img": "icons8-center-of-gravity-80.png",
                 "property" : {
-                    "hpAttack": 0.025,
-                    "hpRecharge": 0.05
+                    "hpAttack": 0.1,
+                    "attackTarget": [1],
+                    "hpRecharge": 0
                 }
             },
             {
                 "name": "Potion",
                 "price": 100,
                 "img": "icons8-hyper-potion-96.png",
+                "target": [],
                 "property" : {
                     "hpAttack": 0,
+                    "attackTarget": [],
                     "hpRecharge": 0.1
                 }
             },
@@ -162,8 +165,10 @@
                 "name": "Bomb",
                 "price": 100,
                 "img": "icons8-atomic-bomb-96.png",
+                "target": [],
                 "property" : {
                     "hpAttack": 0.05,
+                    "attackTarget": [-1],
                     "hpRecharge": 0
                 }
             }
