--- a/Resources/config.json
+++ b/Resources/config.json
@@ -8,7 +8,8 @@
             "speed": 0,
             "AI": {
                 "delay": 0.3,
-                "maxRandomDuration": 1.5
+                "IQ": 2,
+                "skills": 1
             }
         },
         {
@@ -16,8 +17,9 @@
             "title": "BEGINNER",
             "speed": 0.55,
             "AI": {
-                "delay": 0.3,
-                "maxRandomDuration": 1.5
+                "delay": 0.2,
+                "IQ": 3,
+                "skills": 1
             }
         },
         {
@@ -25,8 +27,9 @@
             "title": "BRONZE 1",
             "speed": 0.6,
             "AI": {
-                "delay": 0.3,
-                "maxRandomDuration": 1.3
+                "delay": 0.2,
+                "IQ": 5,
+                "skills": 1
             }
         },
         {
@@ -34,8 +37,9 @@
             "title": "BRONZE 2",
             "speed": 0.62,
             "AI": {
-                "delay": 0.25,
-                "maxRandomDuration": 1.3
+                "delay": 0.1,
+                "IQ": 8,
+                "skills": 1
             }
         },
         {
@@ -43,8 +47,9 @@
             "title": "BRONZE 3",
             "speed": 0.65,
             "AI": {
-                "delay": 0.25,
-                "maxRandomDuration": 1.3
+                "delay": 0.1,
+                "IQ": 10,
+                "skills": 1
             }
         },
         {
@@ -52,8 +57,9 @@
             "title": "SILVER 1",
             "speed": 0.7,
             "AI": {
-                "delay": 0.2,
-                "maxRandomDuration": 1.3
+                "delay": 0.07,
+                "IQ": 15,
+                "skills": 2
             }
         },
         {
@@ -61,8 +67,9 @@
             "title": "SILVER 2",
             "speed": 0.75,
             "AI": {
-                "delay": 0.2,
-                "maxRandomDuration": 1.3
+                "delay": 0.07,
+                "IQ": 15,
+                "skills": 2
             }
         },
         {
@@ -70,8 +77,9 @@
             "title": "SILVER 3",
             "speed": 0.8,
             "AI": {
-                "delay": 0.2,
-                "maxRandomDuration": 1.3
+                "delay": 0.07,
+                "IQ": 20,
+                "skills": 2
             }
         },
         {
@@ -79,8 +87,9 @@
             "title": "GOLD 1",
             "speed": 0.9,
             "AI": {
-                "delay": 0.17,
-                "maxRandomDuration": 1.2
+                "delay": 0.05,
+                "IQ": 100,
+                "skills": 3
             }
         },
         {
@@ -88,8 +97,9 @@
             "title": "GOLD 2",
             "speed": 0.95,
             "AI": {
-                "delay": 0.17,
-                "maxRandomDuration": 1.2
+                "delay": 0.05,
+                "IQ": 100,
+                "skills": 3
             }
         },
         {
@@ -97,8 +107,9 @@
             "title": "GOLD 3",
             "speed": 1.0,
             "AI": {
-                "delay": 0.17,
-                "maxRandomDuration": 1.2
+                "delay": 0.05,
+                "IQ": 100,
+                "skills": 3
             }
         },
         {
@@ -106,8 +117,9 @@
             "title": "ROYAL 1",
             "speed": 1.1,
             "AI": {
-                "delay": 0.15,
-                "maxRandomDuration": 1.0
+                "delay": 0.03,
+                "IQ": 100,
+                "skills": 3
             }
         },
         {
@@ -115,8 +127,9 @@
             "title": "ROYAL 2",
             "speed": 1.2,
             "AI": {
-                "delay": 0.15,
-                "maxRandomDuration": 1.0
+                "delay": 0.03,
+                "IQ": 100,
+                "skills": 3
             }
         },
         {
@@ -124,8 +137,9 @@
             "title": "ROYAL 3",
             "speed": 1.3,
             "AI": {
-                "delay": 0.15,
-                "maxRandomDuration": 1.0
+                "delay": 0.03,
+                "IQ": 100,
+                "skills": 3
             }
         },
         {
@@ -133,8 +147,9 @@
             "title": "GOD",
             "speed": 2,
             "AI": {
-                "delay": 0.1,
-                "maxRandomDuration": 0.8
+                "delay": 0.01,
+                "IQ": 1000,
+                "skills": 3
             }
         }
     ],
@@ -142,7 +157,7 @@
         "items": [
             {
                 "name": "Sniper",
-                "price": 150,
+                "price": 100,
                 "img": "icons8-center-of-gravity-80.png",
                 "property" : {
                     "hpAttack": 0.1,
@@ -152,7 +167,7 @@
             },
             {
                 "name": "Potion",
-                "price": 100,
+                "price": 150,
                 "img": "icons8-hyper-potion-96.png",
                 "target": [],
                 "property" : {
@@ -163,7 +178,7 @@
             },
             {
                 "name": "Bomb",
-                "price": 100,
+                "price": 150,
                 "img": "icons8-atomic-bomb-96.png",
                 "target": [],
                 "property" : {
